lots of writing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="site-header">
 
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
+	
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ site.url }}/images/writingpen.png" alt="writingpen" width="44px" height="44px" />{{ site.title }}</a>
+	
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
