--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,8 +1,16 @@
 /**
  * Site header
  */
+.site-lead {
+    background-color: $grey-color-dark;
+    min-height: 56px;
+
+    // Positioning context for the mobile navigation icon
+    position: relative;
+}
+
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    //border-top: 5px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
