--- a/css/main.scss
+++ b/css/main.scss
@@ -2,32 +2,35 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600);
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-family: 'Open Sans', 'Muli', 'lucida grande', sans-serif;
+$base-font-size:   1.333em;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  1rem;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$background-color: #F1F1F1;
+$brand-color:      rgba(233, 172, 75, 1);
+
+$soft-blue-color: rgba(123, 187, 216, 0.30);
+$softer-blue-color: lighten($soft-blue-color, 40%);
+$hard-blue-color: rgba(104, 171, 202, 1);
+$harder-blue-color: darken($hard-blue-color, 25%);
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    1080px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
-
 
 
 // Use media queries like this:
