--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,4 +12,20 @@ layout: default
     {{ content }}
   </div>
 
+  <ul class="post-list">
+    {% for post in site.categories.top %}
+      <li>
+	      {% if post.image %}
+	      	<img src="{{ post.image | prepend: site.baseurl }}" 
+	      	alt="{{ post.title }}" title="{{ post.title }}">
+	      {% endif %}
+        <h2>
+          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <em><small>{{ post.lead }}</small></em>
+        </h2>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}&nbsp;|&nbsp;{{ post.categories | join: ', ' }}</span>
+      </li>
+    {% endfor %}
+  </ul>
+
 </article>
