--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -91,15 +91,16 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $hard-blue-color;
+    color: #2b2b2b;
     text-decoration: none;
 
     &:visited {
-        color: lighten($brand-color, 15%);
+        text-decoration: none;
+        background-color: purple;
     }
 
     &:hover {
-        color: darken( $brand-color, 5% );
+        color: darken( #2b2b2b, 5% );
     }
 }
 
