--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 
 // Our variables
 $base-font-family: 'Open Sans', 'Muli', 'lucida grande', sans-serif;
-$base-font-size:   1.333em;
+$base-font-size:   1.2rem;
 $base-font-weight: 400;
 $small-font-size:  1rem;
 $base-line-height: 1.5;
