updated almost everything. Following up from redesign late last year. Adding two new blog post.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,8 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        <p>{{ site.description }}<br>
+        Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
       </div>
     </div>
 
