--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,8 +7,10 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
+<div class="home">
   <div class="post-content">
     {{ content }}
   </div>
+</div>
 
 </article>
