--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,10 @@ layout: post-default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+  
+</article>
 
+<!--
   <h1 class="page-heading">And some of the better stuff</h1>
 
   <div>
@@ -27,9 +30,8 @@ layout: post-default
         </h2>
         <em><small>{{ post.lead }}</small></em>
         <br>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}&nbsp;<!-- |&nbsp;{{ post.categories | join: ', ' }} --></span>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}&nbsp;</span>
       </div>
     {% endfor %}
   </div>
-
-</article>
+-->
