--- a/css/main.scss
+++ b/css/main.scss
@@ -5,9 +5,9 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600);
 
 // Our variables
-$base-font-family: 'Open Sans', 'Muli', 'lucida grande', sans-serif;
-$base-font-size:   1.5rem;
-$base-font-weight: 400;
+$base-font-family: Georgia, 'Muli', 'lucida grande', sans-serif;
+$base-font-size:   1.2rem;
+$base-font-weight: 100;
 $small-font-size:  1rem;
 $base-line-height: 1.7;
 
