new post about new transitions

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -340,6 +340,11 @@
             font-size: 18px;
         }
     }
+    
+    hr {    
+	    max-width: 500px;
+    	margin: 40px auto;
+    }
 }
 
 div.post-content > p > img {
