virtical alignment on index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -235,7 +235,7 @@
     border-radius: 16px;
     box-shadow: 19px 18px #cce0e9;
     max-width: 249px;
-    vertical-align: middle;
+    vertical-align: top;
     padding: 25px;
     margin: 18px;
 /*
